manifests/deployments.yaml
---
# Appointment Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  labels:
    app: appointment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: appointment-service
        image: 922718141448.dkr.ecr.eu-north-1.amazonaws.com/appointment-service:latest
        ports:
        - containerPort: 3001
---
# Patient Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
  labels:
    app: patient-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: patient-service
        image: 922718141448.dkr.ecr.eu-north-1.amazonaws.com/patient-service:latest
        ports:
        - containerPort: 3000
