manifests/services.yaml
---
# Appointment Service ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  selector:
    app: appointment-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
---
# Patient Service ClusterIP
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
