manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  rules:
  - http:
      paths:
      - path: /appointments
        pathType: Prefix
        backend:
          service:
            name: appointment-service
            port:
              number: 80
      - path: /patients
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 80
